-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 15
-
Component/s: hotspot
If investigation shows that some of the issues are independent, they should be converted to separate bugs again.
- causes
-
JDK-8376587 Fatal "dead path discovered by TypeNode during igvn" after C2 compilation
-
- Open
-
-
JDK-8371464 C2: assert(no_dead_loop) failed: dead loop detected
-
- Resolved
-
- duplicates
-
JDK-8336293 C2 produces inconsistent results with loops with long trip counts
-
- Closed
-
-
JDK-8336701 Wrong Output of Program Using JDK21-Release Version - 2
-
- Closed
-
-
JDK-8324739 Incorrect result of C2 compiled code
-
- Closed
-
-
JDK-8326992 Incorrect result of C2 compiled code
-
- Closed
-
-
JDK-8327012 Incorrect result of C2 compiled code
-
- Closed
-
-
JDK-8327868 Incorrect result of C2 compiled code
-
- Closed
-
-
JDK-8329535 Wrong output of program running with jdk17u and oracle-jdk17-release
-
- Closed
-
-
JDK-8329536 Mis-compilation in jdk17, jdk21 and jdk23
-
- Closed
-
-
JDK-8329984 Incorrect result of C2 compiled code
-
- Closed
-
-
JDK-8341009 Inconsistent Output Results Under Default JIT Configuration
-
- Closed
-
- relates to
-
JDK-8372259 [lworld] Merge of 8327963 produces assertion escape.cpp "new projection should have been allocated"
-
- Resolved
-
-
JDK-8180290 Allocation elimination fails on arrays of non-constant lengths
-
- Open
-
-
JDK-8237581 Improve allocation expansion
-
- Resolved
-
-
JDK-8372511 C2: Potential issue with GraphKit::set_output_for_allocation
-
- Open
-
- links to
-
Commit(master)
openjdk/jdk/e6546683
-
Review(master)
openjdk/jdk/24570