8327963: C2: fix construction of memory graph around Initialize node to prevent incorrect execution if allocation is removed

Co-authored-by: Emanuel Peter <epeter@openjdk.org>
Co-authored-by: Roberto Castañeda Lozano <rcastanedalo@openjdk.org>
Reviewed-by: epeter, rcastanedalo